--- a/src/components/portal/package.json
+++ b/src/components/portal/package.json
@@ -2,6 +2,7 @@
   "main": "./portal.cjs.js",
   "module": "./portal.esm.js",
   "unpkg": "./portal.min.js",
+  "types": "./Portal.d.ts",
   "browser": {
     "./sfc": "./Portal.vue"
   }
