set new version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "primevue",
-  "version": "3.12.7-SNAPSHOT",
+  "version": "3.13.0",
   "homepage": "https://www.primefaces.org/primevue",
   "repository": {
     "type": "git",
