--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "primevue",
-  "version": "3.15.0",
+  "version": "3.15.1-SNAPSHOT",
   "homepage": "https://www.primefaces.org/primevue",
   "repository": {
     "type": "git",
