--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/test-utils": "^2.0.0-0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-dom": "^3.2.38",
+    "@vue/test-utils": "^2.0.0-0",
     "@vuelidate/core": "^2.0.0-alpha.14",
     "@vuelidate/validators": "^2.0.0-alpha.12",
     "babel-eslint": "^10.1.0",
@@ -53,27 +54,29 @@
     "codesandbox": "2.1.14",
     "core-js": "^3.6.5",
     "eslint": "^7.0.0",
-    "eslint-plugin-vue": "^7.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-vue": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.4.0",
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-uglifycss": "^1.0.6",
-    "sass": "^1.45.0",
+    "i": "^0.3.7",
+    "npm": "^8.19.1",
+    "prettier": "2.7.1",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "prismjs": "^1.15.0",
     "quill": "^1.3.7",
-    "prettier": "2.7.1",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0-beta.9",
+    "sass": "^1.45.0",
     "sass-loader": "^8.0.2",
     "vue": "3.2.31",
-    "vue-router": "^4.0.0-0",
     "vue-jest": "^5.0.0-0",
+    "vue-router": "^4.0.0-0",
     "webpack-cli": "^4.3.0"
   }
 }
