--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,5 @@ jobs:
         cache: 'npm'
 
     - name: Build
-      run: |
-        npm install --legacy-peer-deps
-        npm run build-check
+      run: npm run build-check
 
