--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "build:app": "vue-cli-service build",
         "build:lib": "npm run build:check && npm run build:package",
         "build:package": "NODE_ENV=production rollup -c && node build-meta && node api-generator/build-api && gulp build-styles",
-        "build:check": "npm run test:unit && npm run lint && npm run format:check && npm run security:check",
+        "build:check": "npm run lint && npm run format:check && npm run security:check && npm run test:unit",
         "security:check": "npm audit --production --audit-level high",
         "format": "prettier --write \"src/**/*.{js,vue}\"",
         "format:check": "prettier --check \"src/**/*.{js,vue}\"",
@@ -42,7 +42,7 @@
         "@fullcalendar/timegrid": "^5.7.2",
         "@fullcalendar/vue3": "^5.7.2",
         "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-eslint": "~5.0.8",
+        "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-plugin-router": "~4.5.0",
         "@vue/cli-plugin-unit-jest": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
@@ -54,8 +54,8 @@
         "chart.js": "3.3.2",
         "codesandbox": "2.1.14",
         "core-js": "^3.6.5",
-        "eslint": "^7.0.0",
-        "eslint-config-prettier": "^8.5.0",
+        "eslint": "^6.0.0",
+        "eslint-config-prettier": "^6.0.0",
         "eslint-plugin-vue": "^7.0.0",
         "gulp": "^4.0.2",
         "gulp-concat": "^2.6.0",
