--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "build:package": "NODE_ENV=production rollup -c && node build-meta && node api-generator/build-api && gulp build-styles",
         "build:check": "npm run lint && npm run format:check && npm run security:check && npm run test:unit",
         "security:check": "npm audit --production --audit-level high",
-        "format": "prettier --write \"src/**/*.{js,vue}\"",
-        "format:check": "prettier --check \"src/**/*.{js,vue}\"",
+        "format": "prettier --write \"**/*.{js,vue,d.ts}\"",
+        "format:check": "prettier --check \"**/*.{js,vue,d.ts}\"",
         "lint": "vue-cli-service lint",
         "lint:fix": "vue-cli-service lint --fix",
         "test:unit": "vue-cli-service test:unit --max-warnings=0"
