--- a/.vscode/settings.team.json
+++ b/.vscode/settings.team.json
@@ -3,6 +3,7 @@
         "source.fixAll.eslint": true,
         "source.organizeImports": true
     },
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
         "editor.formatOnSave": true
