--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.9",
+    "@fullcalendar/core": "^5.7.2",
+    "@fullcalendar/daygrid": "^5.7.2",
+    "@fullcalendar/interaction": "^5.7.2",
+    "@fullcalendar/timegrid": "^5.7.2",
+    "@fullcalendar/vue3": "^5.7.2",
+    "quill": "^1.3.7",
     "primeflex": "^3.2.1",
     "chart.js": "3.3.2",
     "primeicons": "^5.0.0",
