--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "testRollup":"rollup -c"
   },
   "devDependencies": {
     "@fullcalendar/core": "^5.7.2",
@@ -22,6 +23,9 @@
     "sass": "^1.45.0",
     "sass-loader": "^8.0.2",
     "@vuelidate/core": "^2.0.0-alpha.14",
-    "@vuelidate/validators": "^2.0.0-alpha.12"
+    "@vuelidate/validators": "^2.0.0-alpha.12",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0-beta.9"
   }
 }
