--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "testRollup":"rollup -c"
+    "testRollup":"rollup -c",
+    "testgulp": "gulp build-styles"
   },
   "devDependencies": {
     "@fullcalendar/core": "^5.7.2",
@@ -26,6 +27,12 @@
     "@vuelidate/validators": "^2.0.0-alpha.12",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0-beta.9"
+    "rollup-plugin-vue": "^6.0.0-beta.9",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-flatten": "^0.4.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-uglifycss": "^1.0.6"
   }
 }
