--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "build:package": "NODE_ENV=production rollup -c && node build-meta && node api-generator/build-api && gulp build-styles",
+    "build:check": "npm run lint && npm run format:check && npm run security:check && npm run test:unit",
+    "security:check": "npm audit --production --audit-level high",
     "format": "prettier --write \"**/*.{js,vue,d.ts}\"",
     "format:check": "prettier --check \"**/*.{js,vue,d.ts}\"",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "test:build": "NODE_ENV=production rollup -c"
   },
   "devDependencies": {
     "@fullcalendar/core": "^5.11.0",
