--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,23 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm run build:check
+
+    - name: Lint
+      if: ${{ success() }}
+      run: |
+        npm run lint
+
+    - name: Code Format
+      if: ${{ success() }}
+      run: |
+        npm run format:check
+
+    - name: Security
+      if: ${{ success() }}
+      run: |
+        npm run security:check
+
+    - name: Test
+      if: ${{ success() }}
+      run: |
+        npm run test:unit
