--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "primevue",
-    "version": "3.17.1-SNAPSHOT",
+    "version": "3.18.0",
     "homepage": "https://www.primefaces.org/primevue",
     "repository": {
         "type": "git",
