--- a/.github/workflows/pr-check-code-command.yml
+++ b/.github/workflows/pr-check-code-command.yml
@@ -14,6 +14,12 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.x
+          cache: 'npm'
+
       - name: Install packages
         run: |
           npm install
