--- a/.github/workflows/pr-check-code-command.yml
+++ b/.github/workflows/pr-check-code-command.yml
@@ -14,10 +14,10 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 16
           cache: 'npm'
 
       - name: Install packages
