Remove need revision label when workflow success

--- a/.github/workflows/pr-check-code-command.yml
+++ b/.github/workflows/pr-check-code-command.yml
@@ -53,3 +53,8 @@ jobs:
         with:
           message: |
             Please review the unit tests and commit them again.
+
+      - uses: actions-ecosystem/action-remove-labels@v1
+        if: ${{ success() }}
+        with:
+          labels: 'need revision'
