--- a/.github/workflows/issue-labeled.yml
+++ b/.github/workflows/issue-labeled.yml
@@ -22,14 +22,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.issue.number }}
           body: |
-            We're unable to replicate your issue, if you are able to create a reproducer in the future please add this issue. This issue will be closed if no activities in 20 days
-
-      - name: invalid
-        if: github.event.label.name == 'invalid'
-        uses: actions-cool/issues-helper@v3
-        with:
-          actions: 'create-comment,close-issue'
-          token: ${{ secrets.GITHUB_TOKEN }}
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            Your issue has been closed because it does not conform to our issue requirements.
+            We're unable to replicate your issue, if you are able to create a reproducer or add details please edit this issue. This issue will be closed if no activities in 20 days.
