--- a/.github/workflows/pr-checker.yml
+++ b/.github/workflows/pr-checker.yml
@@ -1,4 +1,4 @@
-name: Pr Code Command Checker
+name: Pr Checker
 
 on:
   pull_request:
@@ -19,7 +19,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          message: 'Please add any related issue link in this pr'
+          message: 'Thanks a lot for your contribution! But, PR does not seem to be linked to any issues. Please [manually link to an issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/linking-a-pull-request-to-an-issue#manually-linking-a-pull-request-or-branch-to-an-issue-using-the-issue-sidebar) or mention it in the description using #<issue_id>.'
 
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -55,13 +55,14 @@ jobs:
           message: |
             Please review the unit tests and commit them again.
 
-      - name: Check on failures
+      - name: Add Label
         if: ${{ failure() }}
         uses: actions-ecosystem/action-add-labels@v1
         with:
           labels: 'need revision'
 
-      - uses: actions-ecosystem/action-remove-labels@v1
+      - name: Remove Label
+        uses: actions-ecosystem/action-remove-labels@v1
         if: ${{ success() }}
         with:
-          labels: 'need revision' # will remove here
+          labels: 'need revision'
