--- a/.github/workflows/issue-inactive-checker.yml
+++ b/.github/workflows/issue-inactive-checker.yml
@@ -10,13 +10,13 @@ permissions:
 jobs:
   issue-close-require:
     permissions:
-      issues: write 
-      pull-requests: write 
+      issues: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: cannot replicate
         uses: actions-cool/issues-helper@v3
         with:
           actions: "close-issues"
-          labels: "cannot replicate"
+          labels: "Resolution: Cannot Replicate"
           inactive-day: 20
