--- a/.github/workflows/pr-checker.yml
+++ b/.github/workflows/pr-checker.yml
@@ -59,10 +59,10 @@ jobs:
         if: ${{ failure() }}
         uses: actions-ecosystem/action-add-labels@v1
         with:
-          labels: 'need revision'
+          labels: 'Resolution: Needs Revision'
 
       - name: Remove Label
         uses: actions-ecosystem/action-remove-labels@v1
         if: ${{ success() }}
         with:
-          labels: 'need revision'
+          labels: 'Resolution: Needs Revision'
