--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "primevue",
-  "version": "2.10.1-SNAPSHOT",
+  "version": "2.10.1",
   "homepage": "https://www.primefaces.org/primevue",
   "repository": {
     "type": "git",
