--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ node_modules
 .env
 dist
 .DS_Store
+
+# Themes
+public/themes/soho-light/
+public/themes/soho-dark/
+public/themes/viva-light/
+public/themes/viva-dark/
+public/themes/mira/
+public/themes/nano/
