--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "primevue",
-    "version": "3.17.1-SNAPSHOT",
-    "homepage": "https://www.primefaces.org/primevue",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/primefaces/primevue.git"
-    },
-    "license": "MIT",
+  "version": "3.21.0",
+  "homepage": "https://www.primefaces.org/primevue",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/primefaces/primevue.git"
+  },
+  "license": "MIT",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
