--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,8 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /primevue/
-RewriteRule ^primevue/index\.php$ - [L]
+RewriteBase /primevue-nuxt/
+RewriteRule ^primevue-nuxt/index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /primevue/index.php [L]
+RewriteRule . /primevue-nuxt/index.php [L]
 </IfModule>
