--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "primevue",
-  "version": "3.21.0",
-  "homepage": "https://www.primefaces.org/primevue",
-  "repository": {
-      "type": "git",
-      "url": "https://github.com/primefaces/primevue.git"
-  },
-  "license": "MIT",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "build:package": "NODE_ENV=production rollup -c && node build-meta && node api-generator/build-api && gulp build-styles",
-    "build:check": "npm run lint && npm run format:check && npm run security:check && npm run test:unit",
-    "security:check": "npm audit --production --audit-level high",
-    "format": "prettier --write \"**/*.{js,vue,d.ts}\"",
-    "format:check": "prettier --check \"**/*.{js,vue,d.ts}\"",
-    "test:unit": "vitest",
-    "test:build": "NODE_ENV=production rollup -c"
-  },
-  "devDependencies": {
-    "@fullcalendar/core": "^5.11.0",
-    "@fullcalendar/daygrid": "^5.11.0",
-    "@fullcalendar/interaction": "^5.11.0",
-    "@fullcalendar/timegrid": "^5.11.0",
-    "@fullcalendar/vue3": "^5.11.0",
-    "@vitejs/plugin-vue-jsx": "^2.0.1",
-    "@vue/test-utils": "^2.0.0",
-    "@vuelidate/core": "^2.0.0-alpha.14",
-    "@vuelidate/validators": "^2.0.0-alpha.12",
-    "chart.js": "3.3.2",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-flatten": "^0.4.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2",
-    "gulp-uglifycss": "^1.0.6",
-    "jsdom": "^19.0.0",
-    "nuxt": "^3.0.0",
-    "primeflex": "^3.3.0",
-    "primeicons": "^6.0.1",
-    "quill": "^1.3.7",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0-beta.9",
-    "sass": "^1.45.0",
-    "sass-loader": "^8.0.2",
-    "vitest": "^0.23.2",
-    "prettier": "2.7.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-vue": "^9.4.0",
-    "@babel/eslint-parser": "^7.18.9"
-  }
+    "name": "primevue",
+    "version": "3.21.0",
+    "homepage": "https://www.primefaces.org/primevue",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/primefaces/primevue.git"
+    },
+    "license": "MIT",
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "build:lib": "npm run build:check && npm run build:package",
+        "build:package": "NODE_ENV=production rollup -c && node build-meta && node api-generator/build-api && gulp build-styles",
+        "build:check": "npm run format:check && npm run security:check && npm run test:unit",
+        "security:check": "npm audit --production --audit-level high",
+        "format": "prettier --write \"**/*.{js,vue,d.ts}\"",
+        "format:check": "prettier --check \"**/*.{js,vue,d.ts}\"",
+        "test:unit": "vitest",
+        "test:build": "NODE_ENV=production rollup -c"
+    },
+    "devDependencies": {
+        "@fullcalendar/core": "^5.11.0",
+        "@fullcalendar/daygrid": "^5.11.0",
+        "@fullcalendar/interaction": "^5.11.0",
+        "@fullcalendar/timegrid": "^5.11.0",
+        "@fullcalendar/vue3": "^5.11.0",
+        "@vitejs/plugin-vue-jsx": "^2.0.1",
+        "@vue/test-utils": "^2.0.0",
+        "@vuelidate/core": "^2.0.0-alpha.14",
+        "@vuelidate/validators": "^2.0.0-alpha.12",
+        "chart.js": "3.3.2",
+        "gulp": "^4.0.2",
+        "gulp-concat": "^2.6.0",
+        "gulp-flatten": "^0.4.0",
+        "gulp-rename": "^2.0.0",
+        "gulp-uglify": "^3.0.2",
+        "gulp-uglifycss": "^1.0.6",
+        "jsdom": "^19.0.0",
+        "nuxt": "^3.0.0",
+        "primeflex": "^3.3.0",
+        "primeicons": "^6.0.1",
+        "quill": "^1.3.7",
+        "rollup-plugin-postcss": "^4.0.0",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-vue": "^6.0.0-beta.9",
+        "sass": "^1.45.0",
+        "sass-loader": "^8.0.2",
+        "vitest": "^0.23.2",
+        "prettier": "2.7.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-vue": "^9.4.0",
+        "@babel/eslint-parser": "^7.18.9"
+    }
 }
