--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "format": "prettier --write \"**/*.{js,vue,d.ts}\"",
         "format:check": "prettier --check \"**/*.{js,vue,d.ts}\"",
         "test:unit": "vitest",
-        "test:build": "NODE_ENV=production rollup -c",
+        "test:coverage": "vitest --coverage",
         "lint": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint:fix": "eslint --fix --ext \".js,.vue\" --ignore-path .gitignore ."
     },
@@ -32,6 +32,7 @@
         "@fullcalendar/timegrid": "^5.11.0",
         "@fullcalendar/vue3": "^5.11.0",
         "@vitejs/plugin-vue-jsx": "^2.0.1",
+        "@vitest/coverage-istanbul": "^0.26.2",
         "@vue/test-utils": "^2.0.0",
         "@vuelidate/core": "^2.0.0-alpha.14",
         "@vuelidate/validators": "^2.0.0-alpha.12",
