--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "primevue",
-    "version": "3.22.0",
+    "version": "3.23.0-SNAPSHOT",
     "homepage": "https://www.primefaces.org/primevue",
     "repository": {
         "type": "git",
