Remove double escape chars

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
     - name: Support
-      url: https://primevue.org//support/
+      url: https://primevue.org/support/
       about: Professional support for the open source innovation.
