Api doc workflow updated

--- a/.github/workflows/generate_api_doc.yml
+++ b/.github/workflows/generate_api_doc.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master ]
     paths:
       - '**/**/*.d.ts'
+      - '/api-generator/build-apidoc.js'
 
 permissions:
   contents: write
