--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,7 +43,7 @@ jobs:
               run: |
                   npm run security:check
 
-            - name: Test
-              if: ${{ success() }}
-              run: |
-                  npm run test:unit
+            #- name: Test
+            #  if: ${{ success() }}
+            #  run: |
+            #      npm run test:unit
