--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,6 +3,8 @@ name: NodeJS CI
 on:
     push:
         branches: [master]
+    pull_request:
+        branches: [master]
 
 permissions:
     contents: read
@@ -16,10 +18,10 @@ jobs:
                 node-version: [16.x, 18.x]
 
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
 
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
@@ -43,7 +45,7 @@ jobs:
               run: |
                   npm run security:check
 
-            - name: Test
-             if: ${{ success() }}
-             run: |
-                 npm run test:unit
+            - name: Unit Tests Check
+              if: ${{ success() }}
+              run: |
+                  npm run test:unit
