--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "security:check": "npm audit --production --audit-level high",
         "format": "prettier --write \"**/*.{js,vue,d.ts}\"",
         "format:check": "prettier --check \"**/*.{js,vue,d.ts}\"",
-        "test:unit": "vitest",
+        "test:unit": "vitest run",
+        "test:unit:watch": "vitest watch",
         "test:coverage": "vitest run --coverage",
         "lint": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint:fix": "eslint --fix --ext \".js,.vue\" --ignore-path .gitignore .",
