--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "primevue",
-    "version": "3.28.0",
+    "version": "3.29.0-SNAPSHOT",
     "homepage": "https://primevue.org/",
     "repository": {
         "type": "git",
