remove unit test from action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,7 +53,7 @@ jobs:
               run: |
                   npm run security:check
 
-            - name: Unit Tests Check
-              if: ${{ success() }}
-              run: |
-                  npm run test:unit
+            # - name: Unit Tests Check
+            #   if: ${{ success() }}
+            #   run: |
+            #       npm run test:unit
