--- a/components/lib/basecomponent/package.json
+++ b/components/lib/basecomponent/package.json
@@ -2,6 +2,7 @@
   "main": "./basecomponent.cjs.js",
   "module": "./basecomponent.esm.js",
   "unpkg": "./basecomponent.min.js",
+  "types": "./BaseComponent.d.ts",
   "browser": {
     "./sfc": "./BaseComponent.vue"
   }
