--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "bootstrap",
         "fluent",
         "tailwind",
-        "unstyled"
+        "unstyled",
+        "passthrough"
     ],
     "devDependencies": {
         "@babel/eslint-parser": "^7.18.9",
