--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
         "build:package": "NODE_ENV=production rollup -c && node build-meta && node api-generator/build-api && gulp build-styles",
         "build:check": "npm run format:check && npm run security:check",
         "security:check": "npm audit --production --audit-level high",
-        "format": "prettier --write \"**/*.{js,vue,d.ts}\"",
+        "format": "prettier --write \"**/*.{js,vue,d.ts}\" --cache",
         "format:check": "prettier --check \"**/*.{js,vue,d.ts}\"",
         "test:unit": "vitest run",
         "test:unit:watch": "vitest watch",
         "test:coverage": "vitest run --coverage",
-        "lint": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+        "lint": "eslint --ext \".js,.vue\" --ignore-path .gitignore . --cache",
         "lint:fix": "eslint --fix --ext \".js,.vue\" --ignore-path .gitignore .",
         "apidoc": "node ./api-generator/build-apidoc.js",
         "build:api": "node ./api-generator/build-api.js && npm run apidoc"
