Remove --cache option from formatter

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "build:package": "NODE_ENV=production rollup -c && node build-meta && node api-generator/build-api && gulp build-styles",
         "build:check": "npm run format:check && npm run security:check",
         "security:check": "npm audit --production --audit-level high",
-        "format": "prettier --write \"**/*.{js,vue,d.ts,json}\" --cache",
+        "format": "prettier --write \"**/*.{js,vue,d.ts,json}\"",
         "format:check": "prettier --check \"**/*.{js,vue,d.ts,json}\"",
         "test:unit": "vitest run",
         "test:unit:watch": "vitest watch",
