--- a/.github/workflows/generate_api_doc.yml
+++ b/.github/workflows/generate_api_doc.yml
@@ -34,6 +34,9 @@ jobs:
             - name: Generate api doc
               run: npm run apidoc
 
+            - name: Code Format
+              run: npm run format
+
             - name: Commit doc
               run: |
                   git config user.name "GitHub Actions Bot"
