--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
         "sass-loader": "^8.0.2",
         "typedoc": "0.23.23",
         "typescript": "^4.9.4",
-        "vitest": "^0.29.8"
+        "vitest": "^0.29.8",
+        "nuxt-primevue": "^0.0.1"
     },
     "dependencies": {
         "@docsearch/js": "^3.3.3",
